@@ -1,0 +1,2 @@
+class UserFollow < ActiveRecord::Base
+end
