@@ -1,7 +1,13 @@
 TODO:
 
-2 subdomain for user public page
-
+1 subdomain for user public page
+2 create user_relationship
+3 create relationship between user and shop
+4 add follow button
+5 show message subscribed
+6 message forward
+7 remember me
+8 reset password
 
 
 History:
